2020-09-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4: Uncle Leroy';git push
	git tag -a 4.9.4 -m 'all: simd, baa bit rnd, uio/NC_SHARE; autoconf: enable-gpu; ncclimo: kll rph kdz, hfc/hfs; nces: per-fl-wgt; ncks: vrt fix, dt_fmt json/xml; ncra clm_nfo ilv prm_ints prw; ncremap no_amwg, sdd dfl, si bgc, nco_dwe, xtr_xpn, xtr_nsp';git push --tags

	* NCO 4.9.4-beta03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-beta03: Devastating Shavasana';git push
	git tag -a 4.9.4-beta03 -m '';git push --tags

	* Tidy Clang warning messages due to sloppy ncap2 code, comment-out all _flg_dbg class members

	* NCO 4.9.4-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-beta02: Reanimated Umbrella';git push
	git tag -a 4.9.4-beta02 -m 'ncra --prm_ints; ncremap xtr_xpn, xtr_nsp, nni->dwe';git push --tags

	* ncra set output type of all fix/prc variables in nco_set_prm_typ_out() with PROMOTE_INTS

	* ncremap add long_name attributes to map-file src_grid_dims, dst_grid_dims

	* nco_rgr_wgt() clarify that ERROR messages come from "the regridder"

2020-08-31  Charlie Zender  <zender@uci.edu>

	* ncra add/call nco_set_prm_typ_out() to support --promote_ints --prm_int option

2020-08-28  Charlie Zender  <zender@uci.edu>

	* ncremap rename Nearest Neighbor Interpolation (_nni) to Distance-Weighted Extrapolation (_dwe)

2020-08-27  Charlie Zender  <zender@uci.edu>

	* ncremap workaround to prevent multi-arguments from becoming separate global metadata attributes

	* ncremap fix lat_nbr regression introduced in beta01

	* ncremap genericize xtr_nsp and xtr_xpn arguments for both ESMF and NCO nco_nni

	* NCO 4.9.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-beta01: Uncle Leroy';git push
	git tag -a 4.9.4-beta01 -m 'ncremap/ncks nco_nni, xtr_nsp, xtr_xpn; ncra doc prw, clm_nfo->cb;';git push --tags

	* ncks/ncremap add stubs for nco_nni, xtr_nsp, xtr_xpn
