@@ -129,8 +129,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @set doc-edition 4.9.4-beta02
 @set copyright-years 1995--2020
 @set update-year 2020
-@set update-date 28 August 2020
-@set update-month August 2020
+@set update-date 1 September 2020
+@set update-month September 2020
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
 
